--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav id="navbar">
         <div class="nav-content">
             <div class="logo">
-                <img src="/assets/Website_logo_red.png" alt="Logo" height="40">
+                <img src="assets/Website_logo_red.png" alt="Logo" height="40">
             </div>
             <ul class="nav-items">
                 <li><a href="#home">Home</a></li>
@@ -710,7 +710,7 @@
             <div class="footer-content">
                 <div class="footer-top">
                     <div class="logo">
-                        <img src="/assets/Website_logo_white.png" alt="Logo" height="60">
+                        <img src="assets/Website_logo_white.png" alt="Logo" height="60">
                     </div>
                     <div class="social-icons-footer">
                         <a href="#" aria-label="Facebook"><i class="ri-facebook-circle-fill"></i></a>
