--- a/index.html
+++ b/index.html
@@ -235,15 +235,15 @@
                         <div class="events">
                             <ol>
                                 <li><a href="#0" data-date="16/01/2014" class="selected">10 Jan</a></li>
-                                <li><a href="#0" data-date="28/02/2014">29 Jan</a></li>
-                                <li><a href="#0" data-date="20/04/2014">11 Feb</a></li>
-                                <li><a href="#0" data-date="20/05/2014">17 Feb</a></li>
-                                <li><a href="#0" data-date="09/07/2014">25 Feb</a></li>
-                                <li><a href="#0" data-date="30/08/2014">2 April</a></li>
-                                <li><a href="#0" data-date="15/09/2014">16 May</a></li>
-                                <li><a href="#0" data-date="01/11/2014">July</a></li>
-                                <li><a href="#0" data-date="10/12/2014">13 Aug</a></li>
-                                <li><a href="#0" data-date="19/01/2015">27 Aug</a></li>
+                                <li class="disabled_options"><a href="#0" data-date="28/02/2014">29 Jan</a></li>
+                                <li class="disabled_options"><a href="#0" data-date="20/04/2014">11 Feb</a></li>
+                                <li class="disabled_options"><a href="#0" data-date="20/05/2014">17 Feb</a></li>
+                                <li class="disabled_options"><a href="#0" data-date="09/07/2014">25 Feb</a></li>
+                                <li class="disabled_options"><a href="#0" data-date="30/08/2014">2 April</a></li>
+                                <li class="disabled_options"><a href="#0" data-date="15/09/2014">16 May</a></li>
+                                <li class="disabled_options"><a href="#0" data-date="01/11/2014">July</a></li>
+                                <li class="disabled_options"><a href="#0" data-date="10/12/2014">13 Aug</a></li>
+                                <li class="disabled_options"><a href="#0" data-date="19/01/2015">27 Aug</a></li>
                             </ol>
 
                             <span class="filling-line" aria-hidden="true"></span>
@@ -564,7 +564,7 @@
                                 <p>Yes, informal groups, such as women's collectives or youth-led initiatives, may apply by partnering with an eligible organization like an NGO, which would act as the primary applicant.</p>
                             </div>
                         </li>
-                        <li>
+                        <li class="disabled_options">
                             <div class="faq_top">
                                 <h3>Can applicants partner with local government agencies?</h3>
                                 <i class="ri-add-line"></i>
@@ -595,7 +595,7 @@
                                     that we are the top logo & branding agency in the area.</p>
                             </div>
                         </li>
-                        <li>
+                        <li  class="disabled_options">
                             <div class="faq_top">
                                 <h3>What are the deadlines for the concept submission and full proposal stages?</h3>
                                 <i class="ri-add-line"></i>
@@ -625,7 +625,7 @@
                                     accomplish things, and are therefore not locked in to the limits they pose.</p>
                             </div>
                         </li>
-                        <li>
+                        <li  class="disabled_options">
                             <div class="faq_top">
                                 <h3>How will I know if my concept has been shortlisted for the full proposal stage?</h3>
                                 <i class="ri-add-line"></i>
@@ -650,7 +650,7 @@
 
                             </div>
                         </li>
-                        <li>
+                        <li class="disabled_options">
                             <div class="faq_top">
                                 <h3>Can I submit the concept summary in a language other than English?</h3>
                                 <i class="ri-add-line"></i>
@@ -672,7 +672,7 @@
 
                             </div>
                         </li>
-                        <li>
+                        <li  class="disabled_options">
                             <div class="faq_top">
                                 <h3>What criteria will be used to evaluate applications?</h3>
                                 <i class="ri-add-line"></i>
